# rpn-to-gemlam

./: .gitignore  .hgignore  .readthedocs.yaml  README.rst  __pkg_metadata__.py  environment-dev.yaml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  pkg_development.rst
env/: requirements.txt
envs/: environment-dev.yaml  environment-rtd.yaml  requirements.txt
fix_march2010/: Readme  cat_insert.sh  do_averaging.sh  fix_solar.sh  fix_solar2.sh
rpn_to_gemlam/: __init__.py  __pkg_metadata__.py  rpn_netcdf.sh  rpn_to_gemlam.py  sketch_clouds_to_solar.py
tests/: test_rpn_to_gemlam.py
